# osql

./: dune-project  osql.opam
lib/: dune  sql.ml  sql_lexer.mll  sql_parser.mly
parser/lib/: dune  main.ml  sql.ml  sql_lexer.mll  sql_parser.mly
parser/test/: dune  test.ml
src/: dune
test/: dune  run_tests.ml
